# Photon

./: CMakeLists.txt  LICENSE
Include/: Camera.h  Canvas.h  Geometry.h  Image.h  ImageWriter.h  Intersection.h  Light.h  Material.h  MathUtils.h  Model.h  ModelFace.h  ModelLoader.h  Plane.h  Renderer.h  Scene.h  Sphere.h  StringUtils.h  Triangle.h  TypeUtils.h
Source/: Geometry.cpp  ImageWriter.cpp  Main.cpp  Material.cpp  MathUtils.cpp  Model.cpp  ModelLoader.cpp  Plane.cpp  Renderer.cpp  Sphere.cpp  StringUtils.cpp  Triangle.cpp
